# axiom-sdk-client

./: .env.example  .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  readme.md  release-flow.sh  rush.json
axiom-client/: Cargo.toml
axiom-client-derive/: Cargo.toml
axiom-client-sdk/: Cargo.toml  readme.md
axiom-client-sdk/data/: account_age_input.json  quickstart_input.json
axiom-client-sdk/examples/: account_age.rs  quickstart.rs
axiom-client-sdk/src/: api.rs  cmd.rs  compute.rs  example.rs  input.rs  lib.rs
axiom-client-sdk/src/example/: account_age.rs  mod.rs  tests.rs
axiom-client-sdk/src/examples/: account_age.rs  mod.rs  quickstart.rs
axiom-client-sdk/src/subquery/: account.rs  header.rs  mapping.rs  mod.rs  receipt.rs  storage.rs  tx.rs
axiom-client-sdk/src/utils/: mod.rs
broadcaster/: README.md  package.json  pnpm-lock.yaml
circuit/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
client/: .env.example  README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
harness/: .env.example  README.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
js/: package.json  pnpm-lock.yaml  readme.md  tsconfig.json
react/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
rust/: Cargo.toml
rust/src/: aggregation.rs  constants.rs  lib.rs  macros.rs  run.rs  scaffold.rs  test.rs  types.rs  utils.rs  vkey.rs
rust/src/run/: aggregation.rs  inner.rs  mod.rs
rust/src/subquery/: account.rs  caller.rs  header.rs  keccak.rs  mapping.rs  mod.rs  receipt.rs  storage.rs  tx.rs  types.rs  utils.rs
rust/src/tests/: base.rs  keccak.rs  mod.rs  rlc.rs  shared_tests.rs  utils.rs
scripts/: buildAll.js  publishAll.js  setLocal.js  (+4 more)
(+1110 files in other folders)
