[package]
name = "axiom-client-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-client = { path = "../axiom-client" }
axiom-client-derive = { path = "../axiom-client-derive" }
ethers = "2.0"
anyhow = "1.0.75"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
