[package]
name = "axiom-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-eth = { git = "https://github.com/axiom-crypto/axiom-eth-working.git", branch = "v2-spearbit-audit-improvements" }
axiom-codec = { git = "https://github.com/axiom-crypto/axiom-eth-working.git", branch = "v2-spearbit-audit-improvements" }
ethers = "2.0"
anyhow = "1.0.75"
tokio = "1.34.0"
dotenv = "0.15.0"
num-traits = "0.2"
num-derive = "0.3"
